2011-03-06  Matevz Tadel  <matevz.tadel@ijs.si>

	* Glasses/SolarSystem.cxx:
	* Glasses/SolarSystem.h:
	Follow-up on changes in OdeCrawler.

2010-12-12  Matevz Tadel  <matevz.tadel@ijs.si>

	* Opcode/Ice/IceTypes.h:
	Remove unused typedefs, defines and unions.

2010-10-17  Matevz Tadel  <matevz.tadel@ijs.si>

	* Glasses/TringuCam.cxx:
	Add includes missing after GledCore cleanup.

2010-09-29  Matevz Tadel  <matevz.tadel@ijs.si>

	* Glasses/Tringula.cxx:
	* Rnr/GL/TringuRep_GL_Rnr.cxx:
	Use new Ray custom-buffer functions.

2010-09-18  Matevz Tadel  <matevz.tadel@ijs.si>

	* Glasses/TriMesh.cxx:
	In MakeBox() do not generate triangle colors, use underlaying
	color of object using the mesh.

2010-09-14  Matevz Tadel  <matevz.tadel@ijs.si>

	* Glasses/TriMesh.cxx:
	In ImportGTSurf() do not automatically generate vertex and
	triangle normals.

2010-05-26  Matevz Tadel  <matevz.tadel@ijs.si>

	* Glasses/Extendio.cxx:
	* Glasses/Extendio.h:
	Add data-member ZLink<ZImage> mTexture.

	* Glasses/TriMesh.cxx:
	* Glasses/TriMesh.h:
	Add function ImportOoliteDAT() that imports Oolite models.

	* Glasses/TringuRep.h:
	Smooth shading requires retriangulation.

	* Rnr/GL/Extendio_GL_Rnr.cxx:
	* Rnr/GL/Extendio_GL_Rnr.h:
	Cache bounding-box rendering state in a data-member.
	Adapt for new TringTvor rendering.

	* Rnr/GL/TringuRep_GL_Rnr.cxx:
	* Rnr/GL/TringuRep_GL_Rnr.h:
	Keep TringTvor_GL_Rnr instance to avoid setup overhead.
	Adapt for new TringTvor rendering.

2010-04-06  Matevz Tadel  <matevz.tadel@ijs.si>

	* Glasses/CrawlerSpiritio.cxx:
	* Glasses/CrawlerSpiritio.h:
	* Glasses/TriMeshLightField.cxx:
	* Glasses/TriMeshLightField.h:
	* Glasses/TringuCam.cxx:
	* Glasses/TringuCam.h:
	* Glasses/TringulaTester.cxx:
	* Glasses/TringulaTester.h:
	* Opcode/Ice/IcePoint.h:
	* Rnr/GL/TringulaTester_GL_Rnr.cxx:
	Replace usage of TVector3 with ZPoint.

	* perllib/GLED_Var1_Widgets.pm:
	Move HPointF to GLED_GledCore_Widgets.pm.

2010-04-04  Matevz Tadel  <matevz.tadel@ijs.si>
